salesforce/force-app/main/default/objects/SingPass_Detail__mdt/SingPass_Detail__mdt.object-meta.xml
<CustomObject>
    <label>SingPass Detail</label>
    <pluralLabel>SingPass Details</pluralLabel>
</CustomObject>