salesforce/force-app/main/default/objects/SingPass_Detail__mdt/fields/Kid__c.field-meta.xml
<CustomField>
    <fullName>Kid__c</fullName>
    <label>Key ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>