salesforce/force-app/main/default/objects/SingPass_Detail__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <label>Token Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>